2015-03-19: link to bartosz

--- a/notes/2015-03-19.md
+++ b/notes/2015-03-19.md
@@ -17,3 +17,7 @@
     * Simpler theorem, also inductive: every polygon
   * Alternative book, read by Jack: Category Theory for the Working Mathematician (too intense)
   * Alternative book, read by Jack: Category Theory (recommended by Jack and Edward Kmett)
+
+## Links
+
+* ["Categories Great and Small"](http://bartoszmilewski.com/2014/12/05/categories-great-and-small/): a very accessible treatment of monoids as categories instead of monoids as sets
